--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+html {
+    font-family: Consolas, monaco, monospace !important;
+}
 h1 {
     background-color: burlywood;
     text-align: center;
@@ -5,8 +8,38 @@ h1 {
 h2 {
     text-align: center;
 }
+nav {
+    width: 100%;
+    text-align: center;
+    border: 2px;
+}
+nav > p {
+    display: inline;
+    width: 100%;
+    list-style-type: none;
+    text-align: center;
+    padding: 10px;
+    border: 2px;
+}
 body {
     background-color: antiquewhite;
+}
+.login {
+    text-align: center;
+}
+.info {
+    text-align: center;
+    margin: auto;
+    width: 50%;
+    padding: 5px;
+    border: 2px dotted black;
+}
+.logout {
+    background-color: #a09c7f;
+    border-radius: 8px;
+    width: 100%;
+    border: none;
+    text-align: center;
 }
 .footer {
     position: fixed;
